--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     <Button
@@ -63,5 +63,38 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.26"
             app:srcCompat="@drawable/steering_wheel"/>
+    <Button
+            android:text="Set From XML"
+            android:layout_width="189dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/button3"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.0" android:onClick="setFromXML"/>
+    <Button
+            android:text="Set From Code"
+            android:layout_width="189dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/button2"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/button6"
+            app:layout_constraintStart_toEndOf="@+id/button" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:onClick="setFromCode"/>
+    <Button
+            android:text=" View Property Animator"
+            android:layout_width="190dp"
+            android:onClick="viewPropertyAnimator"
+            android:layout_height="wrap_content"
+            android:id="@+id/button7" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toTopOf="@+id/button"/>
+    <Button
+            android:text="Property Values Holder"
+            android:layout_width="196dp"
+            android:layout_height="wrap_content"
+            android:onClick="propertyValuesHolder"
+            android:id="@+id/button8" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/button2"
+            app:layout_constraintStart_toEndOf="@+id/button7" android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="0.934"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
